src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-rsup
spec:
  selector:
    app: demo-rsup
    tier: backend
    version: stable
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32001
  type: NodePort
