src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsws-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rsup.wahidin.go.id
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-rsup
                port:
                  number: 8080
    - host: dev-rsup.wahidin.go.id
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-rsup
                port:
                  number: 8080
